# crm_analysis_poc

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  QUICK_START.md  README.md  env.example  main.py  pyproject.toml
.github/workflows/: pre-commit.yaml
agents/: agent_manager.py  comprehensive_agent.py  data_understanding_agent.py
agents/chat-analysis-agent/: .env.example  pyproject.toml
agents/chat-analysis-agent/chat_analysis_agent/: __init__.py  helpers.py
agents/crm-analysis-agent/: .gitignore  ARCHITECTURE.md  INSTALLATION.md  main.py  pyproject.toml  requirements.txt
agents/crm-analysis-agent/agents/: agent_manager.py  comprehensive_agent.py  data_understanding_agent.py  statistical_analysis_agent.py
agents/crm-analysis-agent/backlog/todo/: code_comparison_result.md  code_difference.md  comparison_analysis.md  detailed_domain_analysis.md  domain_context_analysis.md  dynamic_verification.md  error_fix_completed.md  fix_completed.md  flow_analysis.md  funnel_analysis_fix.md  term_frequency_analysis.md  terminology_improvement_completed.md  test_parsing_issue.md  to_fix.md
agents/crm-analysis-agent/config/: column_descriptions.py  settings.py
agents/crm-analysis-agent/core/analysis/: analysis_tools.py  data_analysis_functions.py  data_preprocessing.py
agents/crm-analysis-agent/core/llm/: domain_knowledge.py  simple_llm_terminology_tools.py
agents/crm-analysis-agent/core/reporting/: comprehensive_html_report.py
agents/crm-analysis-agent/data/raw/251022_until_251017/: 251022_Sales_TF_분석.csv
agents/crm-analysis-agent/data/raw/test_dataset1/: 251014_claned_Sales_TF_분석.csv
agents/example-agent/: README.md  pyproject.toml
agents/example-agent/example_agent/: __init__.py  __main__.py  agent.py  orchestrator.py  worker.py
agents/voc-agent/: .env.example  README.md  pyproject.toml
agents/voc-agent/voc_agent/: __init__.py  __main__.py  client.py  create_agent_server.py  settings.py  text_utils.py
agents/voc-agent/voc_agent/audio_processing/: README.md  __init__.py  __main__.py  audio_processing_agent.py  audio_processing_server.py
agents/voc-agent/voc_agent/consultation_analysis/: __init__.py  __main__.py  consultation_analysis_agent.py  consultation_analysis_server.py
agents/voc-agent/voc_agent/data_handler/: __init__.py  __main__.py  data_handler_agent.py  data_handler_server.py
agents/voc-agent/voc_agent/demo/: README.md  single_turn_client.py
agents/voc-agent/voc_agent/diarization/: __init__.py  __main__.py  diarization_agent.py  diarization_server.py
agents/voc-agent/voc_agent/orchestrator/: __init__.py  __main__.py  orchestration_agent.py  orchestration_server.py
agents/voc-agent/voc_agent/prompts/: README.md  __init__.py  audio_processing_prompt.py  consultation_analysis_prompt.py  data_handler_prompt.py  diarization_prompt.py  orchestrator_prompt.py
agents/voc-agent/voc_agent/telemetry/: langfuse.py
agents/voc-agent/voc_agent/utils/: __init__.py  adk_patches.py  agent_server.py  langfuse.py  progress_executor.py
core/analysis/: analysis_tools.py
core/llm/: domain_knowledge.py  prompt_engineering.py
data/raw/test_dataset2/: clean_df_renamed_cleaned.csv
docker/: README.md  ui-for-simple-test.Dockerfile  voc-agent.Dockerfile  voc.docker-compose.yml
docker/chat-analysis/: agent.Dockerfile  compose.yaml  server.Dockerfile
docker/voc/: agent.Dockerfile  docker-compose.yml  server.Dockerfile
mcp-servers/chat-analysis-mcp-server/: pyproject.toml
mcp-servers/chat-analysis-mcp-server/chat_analysis_mcp_server/: __init__.py
mcp-servers/example-server/: README.md  pyproject.toml
mcp-servers/example-server/example_server/: __init__.py  __main__.py  server.py
mcp-servers/voc-server/: .env.example  pyproject.toml
mcp-servers/voc-server/voc_server/: __init__.py  audiofile_tools.py  database.py  models.py  pi_masking.py  s3_download.py  server.py  settings.py  transcribe_tools.py  wav_diarization.py
outputs/reports/20251016/: 251016_1642_comprehensive_data_analysis_report.html  251016_1642_executive_summary_report.html  251016_1642_text_analysis_report.json  251016_1646_comprehensive_data_analysis_report.html  251016_1646_executive_summary_report.html  251016_1655_comprehensive_data_analysis_report.html  251016_1655_executive_summary_report.html  251016_1657_funnel_quantile_data.json  251016_1659_comprehensive_data_analysis_report.html  251016_1659_executive_summary_report.html  251016_1707_comprehensive_data_analysis_report.html  251016_1707_executive_summary_report.html  251016_1720_comprehensive_data_analysis_report.html  251016_1720_executive_summary_report.html  251016_1720_text_analysis_report.json  251016_1723_comprehensive_data_analysis_report.html  251016_1723_executive_summary_report.html  251016_1729_comprehensive_data_analysis_report.html  251016_1729_executive_summary_report.html  251016_1757_comprehensive_data_analysis_report.html  251016_1757_executive_summary_report.html  251016_2219_comprehensive_data_analysis_report.html  251016_2219_executive_summary_report.html  251016_2224_comprehensive_data_analysis_report.html  251016_2224_executive_summary_report.html
outputs/reports/20251017/: 251017_1210_comprehensive_data_analysis_report.html  251017_1210_executive_summary_report.html  251017_1222_comprehensive_data_analysis_report.html  251017_1222_executive_summary_report.html  251017_1342_category_analysis_data.json  251017_1343_comprehensive_data_analysis_report.html  251017_1343_executive_summary_report.html  251017_1353_comprehensive_data_analysis_report.html  251017_1353_executive_summary_report.html  251017_1402_funnel_quantile_data.json  251017_1403_comprehensive_data_analysis_report.html  251017_1403_executive_summary_report.html  251017_1415_comprehensive_data_analysis_report.html  251017_1415_executive_summary_report.html  251017_1420_funnel_segment_analysis_data.json  251017_1422_comprehensive_data_analysis_report.html  251017_1422_executive_summary_report.html  251017_1428_comprehensive_data_analysis_report.html  251017_1428_executive_summary_report.html
(+79 files in other folders)
