[project]
name = "ai-agent-platform"
version = "0.1.0"
description = "AI Agent Platform - Monorepo for AI agents and MCP servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "agents/*",
    "mcp-servers/*"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"