[project]
name = "ai-agent-platform"
version = "0.1.0"
description = "AI Agent Platform - Monorepo for AI agents and MCP servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "voc-agent",
    "voc-server",
    "ai-common",
    "ui-for-simple-test",
]

[tool.uv.workspace]
members = [
    "agents/voc-agent",
    "mcp-servers/voc-server",
    "packages/common",
    "packages/ui-for-simple-test",
]

[tool.uv]
package = false
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",
    "pytest-mock>=3.11.1",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "pre-commit>=3.3.3",
    "ipython>=8.14.0",
    "ipdb>=0.13.13",
    "rich>=13.5.2",
    "types-pyyaml>=6.0.12.20250516",
    "safety>=3.0.0",
]

[tool.uv.sources]
voc-agent = { workspace = true }
voc-server = { workspace = true }
ai-common = { workspace = true }
ui-for-simple-test = { workspace = true }


[tool.black]
line-length = 119

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # docstrings
    "C90",  # mccabe complexity
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
ignore_missing_imports = true
package_root = "."
