[project]
name = "voc-agent"
version = "0.1.0"
description = "VOC 프로젝트용 오케스트레이션 및 다이얼라이제이션 에이전트"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.7",
    "agent-common",
    "google-adk>=1.15.1",
    "openai>=1.109.1",
    "pydantic>=2.11.9",
]

[tool.uv.sources]
agent-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
