[project]
name = "voc-agent"
version = "0.1.0"
description = "VOC 프로젝트용 오케스트레이션 및 오디오 처리 에이전트"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.7",
    "ai-common",
    "google-adk>=1.15.1",
    "langfuse>=3.6.1",
    "litellm>=1.77.5",
    "openai>=1.109.1",
    "pydantic>=2.11.9",
]

[tool.uv.sources]
ai-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
