[project]
name = "voc-server"
version = "0.1.0"
description = "VOC 프로젝트용 MCP 서버"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.11.0",
    "boto3>=1.40.42",
    "ffmpeg>=1.4",
    "imageio-ffmpeg>=0.5.0",
    "mcp>=1.15.0",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.22",
    "pymysql>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
